Fix display of contact us form on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,8 @@ main {
     margin-top: 58.5px;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
+
 }
 
 footer {
@@ -92,16 +94,15 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 120vh;
+    height: auto;
     width: auto;
-    position: sticky;
 }
 
 .contactformbox {
     background-color: rgba(71, 108, 70, 0.8);
     color: antiquewhite;
     margin: 20px;
-    height: 50vh;
+    height: auto;
     width: 85vw;
     display: flex;
     flex-direction: column;
